--- a/test.html
+++ b/test.html
@@ -14,15 +14,15 @@
 <body>
 
 <div class="sub">
-	<button class="sub-button sub-black sub-display-left" onclick="plusDivs()" >&#10094;</button>
+	<button class="sub-button sub-black sub-display-left"  id="leftbtn" >&#10094;</button>
 	<div class="sub-display-center"><img src="img/logo.png" height="52px" width="80px"></div>
-	<button class="sub-button sub-black sub-display-right" onclick="minusDivs()" align = "sub-display-right">&#10095;</button>
+	<button class="sub-button sub-black sub-display-right" id="rightbtn" align = "sub-display-right">&#10095;</button>
 	<div class="images">
-		<img class="mySlides" src="img1/slide1.png" alt="custom_html_banner1" height="250px" width="300px">
-		<img class="mySlides" src="img1/slide2.png" alt="custom_html_banner2" height="250px" width="300px">
-		<img class="mySlides" src="img1/slide3.png" alt="custom_html_banner3" height="250px" width="300px">
-		<img class="mySlides" src="img1/slide4.png" alt="custom_html_banner4" height="250px" width="300px">
-		<img class="mySlides" src="img1/slide5.png" alt="custom_html_banner4" height="250px" width="300px">
+		<img class="mySlides" src="img1/slide1.png" alt="custom_html_banner1">
+		<img class="mySlides" src="img1/slide2.png" alt="custom_html_banner2">
+		<img class="mySlides" src="img1/slide3.png" alt="custom_html_banner3">
+		<img class="mySlides" src="img1/slide4.png" alt="custom_html_banner4">
+		<img class="mySlides" src="img1/slide5.png" alt="custom_html_banner4">
 	</div>
 
 </div>
