--- a/test.html
+++ b/test.html
@@ -7,22 +7,56 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudfare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/utils/Draggable.min.js"></script>
 
 </div>
 </head>
 <body>
 
 <div class="sub">
-	<button class="sub-button sub-black sub-display-left"  id="leftbtn" >&#10094;</button>
-	<div class="sub-display-center"><img src="img/logo.png" height="52px" width="80px"></div>
-	<button class="sub-button sub-black sub-display-right" id="rightbtn" align = "sub-display-right">&#10095;</button>
-	<div class="images">
-		<img class="mySlides" src="img1/slide1.png" alt="custom_html_banner1">
-		<img class="mySlides" src="img1/slide2.png" alt="custom_html_banner2">
-		<img class="mySlides" src="img1/slide3.png" alt="custom_html_banner3">
-		<img class="mySlides" src="img1/slide4.png" alt="custom_html_banner4">
-		<img class="mySlides" src="img1/slide5.png" alt="custom_html_banner4">
+	<button class="sub-button sub-black sub-display-left"  id="leftbtn" ><svg
+		width="25"
+		height="25"
+		viewBox="0 0 7.9374998 7.9375002"
+		version="1.1"
+		id="svg5"
+		xmlns="http://www.w3.org/2000/svg"
+		xmlns:svg="http://www.w3.org/2000/svg">
+	   <defs
+		  id="defs2" />
+	   <g
+		  id="layer1">
+		 <path
+			id="path1052"
+			style="fill:#000000;fill-opacity:1;stroke-width:5.83687;stroke-linecap:round;stroke-linejoin:round"
+			d="M 3.9811524,0.79375001 A -3.1871462,3.1871462 0 0 1 7.168038,3.981153 -3.1871462,3.1871462 0 0 1 3.9811524,7.168038 -3.1871462,3.1871462 0 0 1 0.79375001,3.981153 -3.1871462,3.1871462 0 0 1 3.9811524,0.79375001 Z M 4.7630168,2.008663 4.6116048,2.160592 2.7925944,3.981153 4.6116048,5.801195 4.7630168,5.951574 5.0663573,5.649785 4.9149453,5.498372 3.3972085,3.981153 4.9149453,2.463416 5.0663573,2.312003 Z" />
+	   </g>
+	 </svg></button>
+	<div class="sub-display-center"><img src="img1/logo1.png" height="52px" width="80px"></div>
+	<button class="sub-button sub-black sub-display-right" id="rightbtn"><svg
+		width="25"
+		height="25"
+		viewBox="0 0 7.9374998 7.9375002"
+		version="1.1"
+		id="svg5"
+		xmlns="http://www.w3.org/2000/svg"
+		xmlns:svg="http://www.w3.org/2000/svg">
+	   <defs
+		  id="defs2" />
+	   <g
+		  id="layer1">
+		 <path
+			id="path1052"
+			style="fill:#000000;fill-opacity:1;stroke-width:5.83687;stroke-linecap:round;stroke-linejoin:round"
+			d="M 3.9806356,0.79375001 A 3.1871462,3.1871462 0 0 0 0.79375001,3.981153 3.1871462,3.1871462 0 0 0 3.9806356,7.168038 3.1871462,3.1871462 0 0 0 7.168038,3.981153 3.1871462,3.1871462 0 0 0 3.9806356,0.79375001 Z M 3.1987712,2.008663 3.3501832,2.160592 5.1691936,3.981153 3.3501832,5.801195 3.1987712,5.951574 2.8954307,5.649785 3.0468427,5.498372 4.5645795,3.981153 3.0468427,2.463416 2.8954307,2.312003 Z" />
+	   </g>
+	 </svg></button>
+	<div class="images" id="wrapper">
+		<img src="img1/slide1.png" class="mySlides">
+		<img src="img1/slide2.png" class="mySlides">
+		<img src="img1/slide3.png" class="mySlides">
+		<img src="img1/slide4.png" class="mySlides">
+		<img src="img1/slide5.png" class="mySlides">
 	</div>
 
 </div>
