--- a/test2.html
+++ b/test2.html
@@ -51,13 +51,15 @@
 			d="M 3.9806356,0.79375001 A 3.1871462,3.1871462 0 0 0 0.79375001,3.981153 3.1871462,3.1871462 0 0 0 3.9806356,7.168038 3.1871462,3.1871462 0 0 0 7.168038,3.981153 3.1871462,3.1871462 0 0 0 3.9806356,0.79375001 Z M 3.1987712,2.008663 3.3501832,2.160592 5.1691936,3.981153 3.3501832,5.801195 3.1987712,5.951574 2.8954307,5.649785 3.0468427,5.498372 4.5645795,3.981153 3.0468427,2.463416 2.8954307,2.312003 Z" />
 	   </g>
 	 </svg></button>
-	<div class="images" id="wrapper">
-		<img src="img1/slide3.png" class="mySlides" id="slide1">
-		<img src="img1/slide1.png" class="mySlides" id="slide2">
-		<img src="img1/slide2.png" class="mySlides" id="slide3">
+	<div class="images" id="scroller">
+		<img src="img1/slide1.png" class="mySlides">
+		<img src="img1/slide2.png" class="mySlides">
+		<img src="img1/slide3.png" class="mySlides">
+		<img src="img1/slide4.png" class="mySlides">
+		<img src="img1/slide5.png" class="mySlides">
 	</div>
 </div>
 	
-	<script src="js/main1.js"></script>
+	<script src="js/main2.js"></script>
 </body>
 </html>
